--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>To Watch List</title>
   </head>
   <body>
-    <div id="root">To Watch List</div>
+    <h1>This is from index.html</h1>
+    <div id="root"></div>
     <script src="./bundle.js"></script>
   </body>
 </html>
