--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>To Watch List</title>
   </head>
   <body>
-    <h1>This is from index.html</h1>
+    <!-- <h3>This is from index.html</h3> -->
     <div id="root"></div>
-    <script src="./bundle.js"></script>
+    <script type="text/javascript" src="./public/bundle.js"></script>
   </body>
 </html>
